--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/primary_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/primary_case.component.html
@@ -64,7 +64,7 @@
 
                     <div class="form-group">
                         <label for="Mi">M.I.</label>
-                        <textarea placeholder="Middle Initials" formControlName="Mi" [(ngModel)]="caseBook.Case.Mi" class="form-control" maxlength="2000"></textarea>
+                        <input placeholder="Middle Initials" formControlName="Mi" [(ngModel)]="caseBook.Case.Mi" class="form-control" maxlength="2000" />
                     </div>
 
                     <div class="form-group">
@@ -88,13 +88,11 @@
 
                     <div class="form-group">
                         <label for="MobileNumber">Mobile *</label>
-                        <div class="form-group" [class.has-danger]="casePrimaryForm.controls.MobileNumber.invalid && casePrimaryForm.controls.MobileNumber.touched">
-                            <input placeholder="Mobile" formControlName="MobileNumber" class="form-control" digits maxlength="14" />
-                            <div>
-                                <small *ngIf="casePrimaryForm.controls.MobileNumber.hasError('required') && casePrimaryForm.controls.MobileNumber.touched">Mobile is required.</small>
-                                <small *ngIf="casePrimaryForm.controls.MobileNumber.dirty && casePrimaryForm.controls.MobileNumber.invalid">Please provide a valid Mobile Number</small>
-                            </div>
-                        </div>
+                        <input placeholder="Mobile" formControlName="MobileNumber" class="form-control" digits maxlength="14" />
+                        <div>
+                            <small *ngIf="casePrimaryForm.controls.MobileNumber.hasError('required') && casePrimaryForm.controls.MobileNumber.touched" class="mat-text-warn">Mobile is required.</small>
+                            <small *ngIf="casePrimaryForm.controls.MobileNumber.dirty && casePrimaryForm.controls.MobileNumber.invalid" class="mat-text-warn">Please provide a valid Mobile Number</small>
+                       </div>
                     </div>
 
                     <div class="form-group">
