--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/spouse_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/spouse_case.component.html
@@ -16,22 +16,14 @@
 
                     <div class="form-group">
                         <label for="SpouseHomePhone">Spouse Home phone</label>
-                        <div class="form-group" [class.has-danger]="spouseForm.controls.SpouseHomePhone.invalid && spouseForm.controls.SpouseHomePhone.touched">
-                            <input formControlName="SpouseHomePhone" digits maxlength="14" class="form-control" />
-                            <div>
-                                <small *ngIf="spouseForm.controls.SpouseHomePhone.dirty && spouseForm.controls.SpouseHomePhone.invalid">Please provide a valid Phone</small>
-                            </div>
-                        </div>
+                        <input formControlName="SpouseHomePhone" digits maxlength="14" class="form-control" />
+                            <small *ngIf="spouseForm.controls.SpouseHomePhone.dirty && spouseForm.controls.SpouseHomePhone.invalid" class="mat-text-warn">Please provide a valid Phone</small>
                     </div>
 
                     <div class="form-group">
                         <label for="SpouseMobilePhone">Spouse Mobile phone</label>
-                        <div class="form-group" [class.has-danger]="spouseForm.controls.SpouseMobilePhone.invalid && spouseForm.controls.SpouseMobilePhone.touched">
-                            <input formControlName="SpouseMobilePhone" digits maxlength="14" class="form-control" />
-                            <div>
-                                <small *ngIf="spouseForm.controls.SpouseMobilePhone.dirty && spouseForm.controls.SpouseMobilePhone.invalid">Please provide a valid Mobile</small>
-                            </div>
-                        </div>
+                        <input formControlName="SpouseMobilePhone" digits maxlength="14" class="form-control" />
+                            <small *ngIf="spouseForm.controls.SpouseMobilePhone.dirty && spouseForm.controls.SpouseMobilePhone.invalid" class="mat-text-warn">Please provide a valid Mobile</small>
                     </div>
 
                     <div class="form-group">
@@ -93,12 +85,8 @@
 
                     <div class="form-group">
                         <label for="PIN">PIN</label>
-                        <div class="form-group" [class.has-danger]="spouseForm.controls.PIN.invalid && spouseForm.controls.PIN.touched">
-                            <input formControlName="PIN" digits maxlength="6" class="form-control" />
-                            <div>
-                                <small *ngIf="spouseForm.controls.PIN.dirty && spouseForm.controls.PIN.invalid">Please provide a valid PIN</small>
-                            </div>
-                        </div>
+                        <input formControlName="PIN" digits maxlength="6" class="form-control" />
+                            <small *ngIf="spouseForm.controls.PIN.dirty && spouseForm.controls.PIN.invalid" class="mat-text-warn">Please provide a valid PIN</small>
                     </div>
 
                 </div>
@@ -130,12 +118,8 @@
 
                     <div class="form-group">
                         <label for="PrimaryEmergencyContactPhoneNumber">Phone number</label>
-                        <div class="form-group" [class.has-danger]="spouseForm.controls.PrimaryEmergencyContactPhoneNumber.invalid && spouseForm.controls.PrimaryEmergencyContactPhoneNumber.touched">
-                            <input formControlName="PrimaryEmergencyContactPhoneNumber" digits maxlength="14" class="form-control" />
-                            <div>
-                                <small *ngIf="spouseForm.controls.PrimaryEmergencyContactPhoneNumber.dirty && spouseForm.controls.PrimaryEmergencyContactPhoneNumber.invalid">Please provide a valid Phone number</small>
-                            </div>
-                        </div>
+                        <input formControlName="PrimaryEmergencyContactPhoneNumber" digits maxlength="14" class="form-control" />
+                            <small *ngIf="spouseForm.controls.PrimaryEmergencyContactPhoneNumber.dirty && spouseForm.controls.PrimaryEmergencyContactPhoneNumber.invalid" class="mat-text-warn">Please provide a valid Phone number</small>
                     </div>
 
                     <div class="form-group">
@@ -159,12 +143,8 @@
 
                     <div class="form-group">
                         <label for="SecondaryEmergencyContactPhoneNumber">Phone number</label>
-                        <div class="form-group" [class.has-danger]="spouseForm.controls.SecondaryEmergencyContactPhoneNumber.invalid && spouseForm.controls.SecondaryEmergencyContactPhoneNumber.touched">
-                            <input formControlName="SecondaryEmergencyContactPhoneNumber" digits maxlength="14" class="form-control" />
-                            <div>
-                                <small *ngIf="spouseForm.controls.SecondaryEmergencyContactPhoneNumber.dirty && spouseForm.controls.SecondaryEmergencyContactPhoneNumber.invalid">Please provide a valid Phone number</small>
-                            </div>
-                        </div>
+                        <input formControlName="SecondaryEmergencyContactPhoneNumber" digits maxlength="14" class="form-control" />
+                            <small *ngIf="spouseForm.controls.SecondaryEmergencyContactPhoneNumber.dirty && spouseForm.controls.SecondaryEmergencyContactPhoneNumber.invalid" class="mat-text-warn">Please provide a valid Phone number</small>
                     </div>
 
                     <div class="form-group">
