Fix : fixed the max length and name of the heading

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Others
+                    Abuse Details(1)
                 </div>
 
                 <div class="card-block">
@@ -90,7 +90,7 @@
 
                     <div class="form-group">
                         <label for="PhysicalAbuseDesc">If other, please specify</label>
-                        <input formControlName="PhysicalAbuseDesc" class="form-control" />
+                        <input formControlName="PhysicalAbuseDesc" class="form-control" maxlength="2000"/>
                     </div>
                 </div>
 
@@ -100,7 +100,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Others (2)
+                    Abuse Details (2)
                 </div>
                 <div class="card-block">
                     
@@ -135,7 +135,7 @@
 
                     <div class="form-group">
                         <label for="EmotionalAbuseDesc">If other, please specify</label>
-                        <input formControlName="EmotionalAbuseDesc" class="form-control" />
+                        <input formControlName="EmotionalAbuseDesc" class="form-control" maxlength="2000"/>
                     </div>
 
                     <div class="form-group">
@@ -168,7 +168,7 @@
 
                     <div class="form-group">
                         <label for="SexualAbuseDesc">If other, please specify</label>
-                        <input formControlName="SexualAbuseDesc" class="form-control" />
+                        <input formControlName="SexualAbuseDesc" class="form-control" maxlength="2000"/>
                     </div>
 
                     <div class="form-group">
@@ -198,7 +198,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Others (3)
+                    Abuse Details (3)
                 </div>
 
                 <div class="card-block">
@@ -213,7 +213,7 @@
 
                     <div class="form-group">
                         <label for="EconomicAbuseDesc">If other, please specify</label>
-                        <input formControlName="EconomicAbuseDesc" class="form-control" />
+                        <input formControlName="EconomicAbuseDesc" class="form-control" maxlength="2000" />
                     </div>
 
                     <div class="form-group">
