Fix: selecting "None of the above" option will remove other options MC-43

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
@@ -13,7 +13,8 @@
                         <label for="ChildrenDeceasedLookupId">Any children deceased/miscarried/aborted?</label>
                         <ss-multiselect-dropdown [options]="childrenDeceasedLookupOptionsList"
                                                  formControlName="ChildrenDeceasedLookupId"
-                                                 [(ngModel)]="caseBook.FamilyHouseHold.ChildrenDeceasedLookupArray">
+                                                 [(ngModel)]="caseBook.FamilyHouseHold.ChildrenDeceasedLookupArray"
+                                                 (ngModelChange)="disableItems($event)">
 
                         </ss-multiselect-dropdown>
                     </div>
