Fix : Changed the names for the headings and fields in the abuse tab

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Abuse Details(1)
+                    Abuse Details - Section 1
                 </div>
 
                 <div class="card-block">
@@ -89,7 +89,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PhysicalAbuseDesc">If other, please specify</label>
+                        <label for="PhysicalAbuseDesc">If others, please specify</label>
                         <input formControlName="PhysicalAbuseDesc" class="form-control" maxlength="2000"/>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Abuse Details (2)
+                    Abuse Details - Section 2
                 </div>
                 <div class="card-block">
                     
@@ -134,7 +134,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="EmotionalAbuseDesc">If other, please specify</label>
+                        <label for="EmotionalAbuseDesc">If others, please specify</label>
                         <input formControlName="EmotionalAbuseDesc" class="form-control" maxlength="2000"/>
                     </div>
 
@@ -167,7 +167,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="SexualAbuseDesc">If other, please specify</label>
+                        <label for="SexualAbuseDesc">If others, please specify</label>
                         <input formControlName="SexualAbuseDesc" class="form-control" maxlength="2000"/>
                     </div>
 
@@ -198,7 +198,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Abuse Details (3)
+                    Abuse Details - Section 3
                 </div>
 
                 <div class="card-block">
@@ -212,7 +212,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="EconomicAbuseDesc">If other, please specify</label>
+                        <label for="EconomicAbuseDesc">If others, please specify</label>
                         <input formControlName="EconomicAbuseDesc" class="form-control" maxlength="2000" />
                     </div>
 
