--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/manage_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/manage_case.component.html
@@ -48,7 +48,7 @@
                         <label for="TotalNoOfSessionsLookupId">Total number of sessions</label>
                         <input type="number" id="TotalNoOfSessionsLookupId" formControlName="TotalNoOfSessionsLookupId" class="form-control" />
                             <small *ngIf="caseManageForm.controls.TotalNoOfSessionsLookupId.touched && caseManageForm.controls.TotalNoOfSessionsLookupId.invalid" class="mat-text-warn">
-                                Value should be between 0 & 99 And Non-Fractional.
+                                Value should be between 0 & 99 and non-fractional.
                             </small>
                     </div>
 
