--- a/Web/WhitePage.MyWeb.UI/src/scss/_custom.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/_custom.scss
@@ -235,3 +235,8 @@ chart {
     display: flex;
     justify-content: space-around;
 }
+my-spinner {
+    position: relative;
+    left: 50%;
+    z-index: 2;
+}
