--- a/Web/WhitePage.MyWeb.UI/src/app/pages/pages.signin.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/pages/pages.signin.html
@@ -5,7 +5,7 @@
             <img src="/assets/img/logo-mychoices.png" alt="My Choices" style="height: 60px" />
         </div>
         <div *ngIf="unsupportedBrowser">
-            <h5 style="color: white; text-align: center;">Your browser is not supported. Please use Chrome, Firefox, Opera, Edge or Safari</h5>
+            <h5 class="BrowserSupportWarning">Your browser is not supported. Please use Chrome, Firefox, Opera, Edge or Safari</h5>
         </div>
         <div *ngIf="isButtonVisible && !unsupportedBrowser" class="container btn-signin">
             <button role="button" type="submit" name="login-submit" id="my-signin2" tabindex="4" class="btn btn-login transparent-btn"
