--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/primary-info.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/primary-info.component.html
@@ -51,6 +51,10 @@
                         <span>{{ (genderLookupOptionsList | MatchesPipe:primaryForm.GenderLookupId) }}</span>
                     </div>
                     <div class="form-group">
+                        <label>Client Age  :</label>
+                        <span>{{ primaryForm.ClientAge }}</span>
+                    </div>
+                    <div class="form-group">
                         <label>Marital Status  :</label>
                         <span>{{ (maritalStatusLookupOptionsList | MatchesPipe:primaryForm.MaritalStatusLookupId) }}</span>
                     </div>
