--- a/Web/WhitePage.MyWeb.UI/src/scss/bootstrap_src/_variables.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/bootstrap_src/_variables.scss
@@ -433,7 +433,7 @@ $input-border-focus:             lighten($brand-primary, 25%) !default;
 $input-box-shadow-focus:         $input-box-shadow, rgba($input-border-focus, .6) !default;
 $input-color-focus:              $input-color !default;
 
-$input-color-placeholder:        $white !default;
+$input-color-placeholder:        #DEDEEE !default;
 
 $input-padding-x-sm:             .5rem !default;
 $input-padding-y-sm:             .25rem !default;
