fix: changed placeholder colors for input and select fields

--- a/Web/WhitePage.MyWeb.UI/src/scss/_custom-variables.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/_custom-variables.scss
@@ -173,3 +173,4 @@ $footer-borders: (
 
 $card-icon-bg:                      transparent;
 $card-icon-color:                   $body-color;
+$input-color-placeholder:           #aaa;
