--- a/Web/WhitePage.MyWeb.UI/src/scss/core/_ng-select.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/core/_ng-select.scss
@@ -51,5 +51,5 @@ ng-select {
     }
 }
 ng-select > div > div.single > div.placeholder {
-    color: #DEDEEE !important;
+    color: #aaa !important;
 }
