Fix: MC-57 Position of Error Message in Sign-in page (client side)

--- a/Web/WhitePage.MyWeb.UI/src/app/pages/pages.signin.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/pages/pages.signin.html
@@ -16,9 +16,9 @@
             </button>
             <button role="button" type="submit" tabindex="5"
                     value="Log In" (click)="tempSignIn()">Temp</button>
-            <div class="form-group">
-                <small class="mat-text-warn">{{errorMsg}}</small>
-            </div>
+        </div>
+        <div class="form-group signin-warning-message">
+            <small class="mat-text-warn">{{errorMsg}}</small>
         </div>
     </div>
 </div>
