fix : modified the headings in edit and view page

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Family
+                    Family Details - Section 1
                 </div>
                 <div class="card-block">
 
@@ -68,7 +68,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Family (2)
+                    Family Details - Section 2
                 </div>
                 <div class="card-block">
 
@@ -138,7 +138,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Family (3)
+                    Family Details - Section 3
                 </div>
                 <div class="card-block">
 
