--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/physical-health.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/physical-health.component.html
@@ -2,7 +2,7 @@
         <div class="col-md-6 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Health
+                    Health Details - Section 1 
                 </div>
                 <div class="card-block info-view">
                     <div class="form-group">
@@ -47,7 +47,7 @@
         <div class="col-md-6 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Health (1)
+                    Health Details - Section 2
                 </div>
                 <div class="card-block info-view">
                     <div class="form-group">
