--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/mental_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/mental_case.component.html
@@ -76,7 +76,7 @@
                         <div class="d-flex flex-column mentalTabData">
                             <div class="card flex-fill">
                                 <div class="card-header">
-                                    Mental Status
+                                    Mental Status - Section 1 
                                 </div>
                                 <div class="card-block">
 
@@ -140,7 +140,7 @@
                         <div class="d-flex flex-column mentalTabData">
                             <div class="card flex-fill">
                                 <div class="card-header">
-                                    Mental Status
+                                    Mental Status - Section 2
                                 </div>
                                 <div class="card-block">
 
@@ -206,7 +206,7 @@
                         <div class="d-flex flex-column mentalTabData">
                             <div class="card flex-fill">
                                 <div class="card-header">
-                                    Mental Status
+                                    Mental Status - Section 3
                                 </div>
                                 <div class="card-block">
 
