--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/physicalHealth_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/physicalHealth_case.component.html
@@ -4,7 +4,7 @@
         <div class="col-md-6 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Health
+                    Health Details - Section 1 
                 </div>
                 <div class="card-block">
 
@@ -84,7 +84,7 @@
         <div class="col-md-6 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Health (1)
+                    Health Details - Section 2
                 </div>
                 <div class="card-block">
 
