--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/household.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/household.component.html
@@ -2,7 +2,7 @@
         <div class="col-md-12 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Family
+                    Family Details - Section 1 
                 </div>
                 <div class="card-block info-view">
                     <div class="form-group">
@@ -41,7 +41,7 @@
         <div class="col-md-12 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Family (2)
+                    Family Details - Section 2
                 </div>
                 <div class="card-block info-view">
                     <div class="form-group">
@@ -80,7 +80,7 @@
         <div class="col-md-12 d-flex flex-column">
             <div class="card">
                 <div class="card-header">
-                    Family (3)
+                    Family Details - Section 3
                 </div>
                 <div class="card-block info-view">
                     <div class="form-group">
